# GBMPULSAR

./: README.md  pyproject.toml
data/171101/: pulseprofile_crab_104-128_pha.csv  pulseprofile_crab_22-33_pha.csv  pulseprofile_crab_33-51_pha.csv  pulseprofile_crab_4-7_pha.csv  pulseprofile_crab_51-73_pha.csv  pulseprofile_crab_7-22_pha.csv  pulseprofile_crab_73-86_pha.csv  pulseprofile_crab_86-104_pha.csv
data/171102/: pulseprofile_crab_104-128_pha.csv  pulseprofile_crab_22-33_pha.csv  pulseprofile_crab_33-51_pha.csv  pulseprofile_crab_4-7_pha.csv  pulseprofile_crab_51-73_pha.csv  pulseprofile_crab_7-22_pha.csv  pulseprofile_crab_73-86_pha.csv  pulseprofile_crab_86-104_pha.csv
data/171103/: pulseprofile_crab_104-128_pha.csv  pulseprofile_crab_22-33_pha.csv  pulseprofile_crab_33-51_pha.csv  pulseprofile_crab_4-7_pha.csv  pulseprofile_crab_51-73_pha.csv  pulseprofile_crab_7-22_pha.csv  pulseprofile_crab_73-86_pha.csv  pulseprofile_crab_86-104_pha.csv
data/171104/: pulseprofile_crab_104-128_pha.csv  pulseprofile_crab_22-33_pha.csv  pulseprofile_crab_33-51_pha.csv  pulseprofile_crab_4-7_pha.csv  pulseprofile_crab_51-73_pha.csv  pulseprofile_crab_7-22_pha.csv  pulseprofile_crab_73-86_pha.csv  pulseprofile_crab_86-104_pha.csv
data/171105/: pulseprofile_crab_104-128_pha.csv  pulseprofile_crab_22-33_pha.csv  pulseprofile_crab_33-51_pha.csv  pulseprofile_crab_4-7_pha.csv  pulseprofile_crab_51-73_pha.csv  pulseprofile_crab_7-22_pha.csv  pulseprofile_crab_73-86_pha.csv  pulseprofile_crab_86-104_pha.csv
data/171106/: pulseprofile_crab_104-128_pha.csv  (+7 more)
(+18 files in other folders)
